--- a/eventos/src/assets/style/global.css
+++ b/eventos/src/assets/style/global.css
@@ -1,3 +1,14 @@
 body{
     font-family: 'Quicksand', sans-serif;
 }
+
+/* .center{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} */
+
+h1{
+    text-align: center;
+    margin: 50px 0;
+}
