--- a/eventos/src/pages/home/style.css
+++ b/eventos/src/pages/home/style.css
@@ -1,5 +1,4 @@
 .container-home{
-    background-color: wheat;
     height: 65vh;
     width: 80vw;
     display: flex;
@@ -10,8 +9,11 @@
 
 .central-container{
     width: 100%;
-    background-color: violet;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+h1{
+    margin-top: 2rem;
 }
